# envweave

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docker/codefix_env_server/: Dockerfile
docker/counter_env_server/: Dockerfile  app.py
docker/gsm8k_env_server/: Dockerfile
docker/gsm8k_mcq_env_server/: Dockerfile
docker/lineworld_env_server/: Dockerfile  app.py
docker/swebench_lite_loc_mcq_env_server/: Dockerfile
docker/swebench_lite_patch_env_server/: Dockerfile
src/envweave/: __init__.py  api.py  env.py  errors.py  ids.py  registry.py  schema.py  serialization.py  server.py  types.py  vector.py
src/envweave/backends/: __init__.py  http.py  inproc.py
src/envweave/bench/: __init__.py  tinker_search_env.py
src/envweave/examples/: __init__.py  codefix_env.py  counter_env.py  gsm8k_env.py  gsm8k_mcq_env.py  lineworld_env.py  swebench_lite_loc_mcq_env.py  swebench_lite_patch_env.py  train_codefix_pg.py  train_gsm8k_mcq_tinker_rl.py  train_gsm8k_tinker_rl.py  train_lineworld_pg.py  train_swebench_lite_loc_mcq_tinker_rl.py  train_swebench_lite_patch_tinker_rl.py
src/envweave/resolvers/: __init__.py  base.py  chain.py  entrypoints.py  http_url.py  local.py  openenv_id.py  pkg.py  prime.py
src/envweave/wrappers/: __init__.py  chat.py  tokenizer.py
tests/: test_autoreset_requests.py  test_basic_inproc.py  test_codefix_env.py  test_gsm8k_env.py  test_gsm8k_mcq_env.py  test_http_backend.py  test_http_backend_metadata.py  test_multi_agent.py  test_schema.py  test_swebench_lite_loc_mcq_env.py  test_swebench_lite_patch_env.py  test_vector_env.py  test_wrappers.py
