[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "envweave"
version = "0.1.0"
description = "Registry + adapters + vectorized runtime for text environments (in-proc or HTTP/docker)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["reinforcement-learning", "environments", "gym", "llm", "vectorized", "multi-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ry2009/envweave"
Repository = "https://github.com/ry2009/envweave"
Issues = "https://github.com/ry2009/envweave/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
bench = ["numpy>=2.0.0", "requests>=2.31.0"]
train = ["numpy>=2.0.0", "matplotlib>=3.8.0"]
torch = ["torch>=2.2.0"]
tinker = ["tinker>=0.7.0"]
# Meta-pytorch OpenEnv core utilities (HTTP client + docker helpers).
openenv = ["openenv-core>=0.1.1", "requests>=2.31.0"]
# SWE-bench Lite dataset loader (Hugging Face datasets).
swebench = ["datasets>=2.19.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/envweave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
